# rufield

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/rufield-adapters/: Cargo.toml
crates/rufield-adapters/src/: csi_replay.rs  lib.rs  rng.rs  scenario.rs  signals.rs  sim.rs
crates/rufield-adapters/tests/: csi_replay_fusion.rs
crates/rufield-adapters/tests/fixtures/: real_csi_medium.jsonl
crates/rufield-bench/: Cargo.toml
crates/rufield-bench/examples/: room_intelligence.rs
crates/rufield-bench/src/: lib.rs  main.rs  metrics.rs  report.rs  runner.rs
crates/rufield-core/: Cargo.toml
crates/rufield-core/src/: error.rs  event.rs  inference.rs  lib.rs  modality.rs  privacy.rs  tensor.rs  traits.rs
crates/rufield-fusion/: Cargo.toml
crates/rufield-fusion/rules/: room_state.toml
crates/rufield-fusion/src/: engine.rs  graph.rs  lib.rs  rules.rs
crates/rufield-privacy/: Cargo.toml
crates/rufield-privacy/src/: lib.rs
crates/rufield-provenance/: Cargo.toml
crates/rufield-provenance/src/: lib.rs
crates/rufield-viewer/: Cargo.toml
crates/rufield-viewer/src/: lib.rs  live.rs  main.rs  runtime.rs  server.rs  source.rs
crates/rufield-viewer/static/: app.js  index.html
crates/rufield-viewer/tests/: http.rs
docs/: ADR-260-rufield-mfs.md
